    no pagesize settings are in sksconf, SKS will use 2048 bytes for key
    and 512 for ptree. The remainining files' pagesize will be set by BDB
    based on the filesystem settings, typically this is 4096 bytes.
    See sampleConfig/sksconf.typical for settings recommended by db_tuner.
  - Makefile: Added distclean target. Dropped autogenerated file from VCS.

1.1.3
  - Makefile fix for 'make dep' if .depend does not exist. Issue #4
  - Makefile fix: sks and sks_add_mail fail to link w/o '-ccopt -pg'
    Issue #23
  - Added -disable_mailsync and -disable_log_diffs to sks.pod 
  - Added file extensions .css, .jpeg, .htm, .es, .js, .xml, .shtml, .xhtm,
    .xhtml and associated MIME types to server code. Part of Issue #6
  - Added sample configuration files in sampleConfig directory
  - Added sample web page files in sampleWeb directory. Issues #7, 9, 19
  - Allow requests for non-official options hget, hash, status, & clean to 
    be preceded by '-x'. Closes issues #10, 11, 13, & 14. 
  - Allow &search with long subkey ID (16 digit) and subkey fingerprint
    subkey lookup was failing with other than a short key ID. However,
    public key lookup was working with short and long key ID and fingerprints.
    This patch makes subkey lookup behave the same as full key lookup.
    http://lists.gnupg.org/pipermail/gnupg-users/2012-January/043495.html
    Initial patch sumbitted by Dan McGee (dpmcgee@gmail.com).
    Cleanup by Yaron Minsky
  - Patch recon script so that POST includes HTTP version number.
    Patch submitted by Daniel Kahn Gilmor

1.1.2:
  - HTML generated by SKS has been cleaned up to pass XHTML 1.0 Strict
    without error or warnings
  - Added HTTP/1.0 after POST, '-' added to safe characters for webserver,
    Add '.html' (text/html) to list of supported file extensions for web server 
  - Johan van Selst's patch implementing Phil Pennock's suggestion
      of an X-HKP-Results-Count: header to returned web server queries