@@ -115,6 +115,13 @@ let get_db () = match !dbstate with
 
 (*****************************************************************)
 
+let copy_conf hd = 
+  let command = "cp " ^ (Filename.concat !Settings.basedir hd) ^
+    " " ^ (Filename.concat (Lazy.force Settings.ptree_dbdir) "DB_CONFIG")  in
+  let r_command = Sys.command command in
+    if r_command <> 0 then
+      failwith ("Copy of DB_CONFIG failed")
+
 (** Set up ptree database if such is necessary *)
 let open_ptree_db settings = 
   match settings.treetype with
@@ -125,7 +132,18 @@ let open_ptree_db settings =
 	plerror 3 "Opening PTree database";
 
 	if not (Sys.file_exists settings.dbdir )
-	then Unix.mkdir settings.dbdir 0o700;
+	then (
+          Unix.mkdir settings.dbdir 0o700;
+	  let lstconf = ["DB_CONFIG.PTree"; "DB_CONFIG"] in
+	  let conf_exists conf = Sys.file_exists 
+	      (Filename.concat !Settings.basedir conf) in
+	  let found_conf = List.filter lstconf
+	    ~f:(fun x -> conf_exists x) in
+	  match found_conf with
+	      [] -> ()
+	    | hd :: _ -> copy_conf hd
+          );
+
 	let dbenv = Dbenv.create () in
 	( match settings.cache_bytes with None -> ()
 	    | Some cache_bytes -> Dbenv.set_cachesize dbenv
